[metadata]
name = pcsptools
version = 0.0.7a3
author = Jakub Opršal
author_email = git@jakub-oprsal.info
description = Tools for checking identities in polymorphism minions. Mostly.
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/jakub-oprsal/pcsptools'
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  pycosat

[options.packages.find]
where = src
